k8s/workload-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: workload-ingress
 namespace: workload
 annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /
   kubernetes.io/tls-acme: "true"
spec:
 tls:
 - hosts:
   - workloads.openebs.ci
   secretName: workload-ingress
 rules:
 - host: workloads.openebs.ci
   http:
     paths:
     - path: /
       backend:
         serviceName: www-workload-client-service
         servicePort: 80
